--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Deply Frontend
+name: Deploy Frontend
 on:
   push:
     branches:
@@ -11,4 +11,4 @@ jobs:
       - uses: actions/checkout@v2
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - run: docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend:latest -f Dockerfile.dev .
-      - run: docker run -e CI=true ${{ secrets.DOCKER_USERNAME }}/frontend:latest npm run test
+      - run: docker run -e CI=true ${{ secrets.DOCKER_USERNAME }}/frontend:latest npm run test -- --coverage
