--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,3 +12,18 @@ jobs:
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - run: docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend:latest -f Dockerfile.dev .
       - run: docker run -e CI=true ${{ secrets.DOCKER_USERNAME }}/frontend:latest npm run test -- --coverage
+
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'
+
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v18
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
+          application_name: docker-react-study
+          environment_name: Docker-react-study-env
+          existing_bucket_name: elasticbeanstalk-ap-southeast-2-078204814936
+          region: ap-southeast-2
+          version_label: ${{ github.sha }}
+          deployment_package: deploy.zip
